# rust-cli-exercises

01_hello_world/: Cargo.toml
01_hello_world/src/: hello.rs  main.rs
01_hello_world/tests/: prints-hello-world.rs
02_bin_files/: Cargo.toml
02_bin_files/src/: func1.rs  func2.rs  main.rs
02_bin_files/src/mod_nested/: func3.rs
03_arg_parse/: Cargo.toml
04_env_reader/: .env  Cargo.toml
04_env_reader/src/: main.rs
